[gd_scene load_steps=13 format=2]

[ext_resource path="res://characters/player/fire_ball.gd" type="Script" id=1]
[ext_resource path="res://assets/light_mask.png" type="Texture" id=2]

[sub_resource type="PhysicsMaterial" id=10]
bounce = 7.01
absorbent = true

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.0193548, 0.180645, 1 )
colors = PoolColorArray( 0, 0.20224, 0.550781, 1, 0.875, 0.738281, 0, 1, 1, 0.117188, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 0.36
emission_shape = 5
emission_ring_radius = 5.53
emission_ring_inner_radius = 0.76
emission_ring_height = 2.77
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 136.72
gravity = Vector3( -50, 0, 0 )
initial_velocity = 9.61
initial_velocity_random = 0.4
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.95
scale_random = 0.69
color_ramp = SubResource( 2 )

[sub_resource type="CircleShape2D" id=4]
radius = 63.43

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 0.621094, 0, 0, 1, 1, 0.914063, 0, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="Curve" id=7]
max_value = 2.0
_data = [ Vector2( 0, 2 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
trail_divisor = 4
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.32
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 191.3
angle_random = 1.0
scale = 2.0
scale_random = 0.72
scale_curve = SubResource( 8 )
color_ramp = SubResource( 6 )

[node name="FireBall" type="RigidBody2D"]
collision_layer = 8
collision_mask = 36
mass = 3.0
physics_material_override = SubResource( 10 )
continuous_cd = 1
contacts_reported = 3
contact_monitor = true
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
scale = Vector2( 1, 0.8 )
color = Color( 0.466667, 0.0196078, 0.0196078, 1 )
antialiased = true
polygon = PoolVector2Array( -2, -8, 2, -8, 6, -4, 6, 4, 2, 8, -2, 8, -6, 4, -6, -4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 1, 0.8 )
polygon = PoolVector2Array( -2, -8, 2, -8, 6, -4, 6, 4, 2, 8, -2, 8, -6, 4, -6, -4 )

[node name="Particles2D" type="Particles2D" parent="."]
amount = 234
lifetime = 0.3
preprocess = 1.0
visibility_rect = Rect2( -250, -250, 500, 500 )
local_coords = false
process_material = SubResource( 3 )

[node name="LifeTimer" type="Timer" parent="."]
one_shot = true

[node name="BounceTimer" type="Timer" parent="."]
one_shot = true

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 2 )
texture_scale = 2.0
color = Color( 0.341176, 0.305882, 0.180392, 0.654902 )
energy = 0.5
shadow_enabled = true
shadow_filter = 4

[node name="AoERadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AoERadius"]
shape = SubResource( 4 )

[node name="ExplosionParticles" type="Particles2D" parent="."]
emitting = false
amount = 400
lifetime = 0.3
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 9 )

[connection signal="body_entered" from="." to="." method="_on_FireBall_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
[connection signal="timeout" from="BounceTimer" to="." method="_on_BounceTimer_timeout"]
